mouseover for d3js. change this to onClick later

--- a/client/index.html
+++ b/client/index.html
@@ -60,6 +60,8 @@
       <script src="bower_components/ng-fastclick/dist/index.min.js"></script>
       <script src="bower_components/angular-ui-router-tabs/src/ui-router-tabs.js"></script>
       <script src="bower_components/d3/d3.js"></script>
+      <script src="bower_components/angular-fullscreen/src/angular-fullscreen.js"></script>
+      <script src="bower_components/d3-tip/index.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
